<resources>
    <string name="app_name">Project 02</string>
    <string name="login_to_your_forge_and_fate_account">Login to your Forge and Fate Account!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_user">Welcome!</string>
    <string name="character_selection">Character Selection</string>
    <string name="create_character">Create Character</string>
    <string name="access_inventory">Access Inventory</string>
    <string name="sign_up_here">Sign Up For Forge &amp; Fate Here!</string>
    <string name="usernamesignup">Username</string>
    <string name="passwordsignup">Password</string>
    <string name="confirm_passwordsignup">Confirm Password</string>
    <string name="sign_up_in_activity_sign_up">Sign Up</string>
    <string name="public_character_list">Public Character List</string>
    <string name="claim">Claim</string>
    <string name="admin_only">Admin: Delete Character</string>
    <string name="characters">Characters Owned: %d</string>
    <string name="edit_character">Edit Character</string>
    <string name="view_character">Work in Progress</string>
    <string name="edit_password">Edit Password</string>
    <string name="is_character_public">Release Character to Public?</string>
    <string name="save_character">Save Character</string>
    <string name="character_class">Character Class</string>
    <string name="character_species">Character Species</string>
    <string name="character_name">Character Name</string>
    <string name="character_age">Character Age</string>
    <string name="select_a_character_to_claim">Select a character to claim…</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="hello">Hello</string>
    <string name="log_out">Logout</string>
    <string name="access_inventory_title">Access Inventory</string>
    <string name="remove">Remove</string>
    <string name="select_a_character_for_removal">Select a character for removal…</string>
    <string name="edit_character_string">Edit Character</string>
</resources>
