<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createCharacterButton"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginTop="70dp"
        android:text="@string/create_character"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

    <Button
        android:id="@+id/characterSelectionButton"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:text="@string/character_selection"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createCharacterButton" />
    <Button
        android:id="@+id/accessInventoryButton"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:text="@string/access_inventory"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterSelectionButton" />


</androidx.constraintlayout.widget.ConstraintLayout>